# connected-paper-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  dev_server.py  future.md  main.py  pyproject.toml
src/paper_agent/: arxiv_client.py  rate_limit.py
src/paper_agent/config/: settings.py
src/paper_agent/evaluation/: evaluator.py
src/paper_agent/graph_store/: citation_graph.py
src/paper_agent/ingestion/: arxiv_fetcher.py
src/paper_agent/llm/: base.py  factory.py  openai_client.py
src/paper_agent/parsing/: pdf_parser.py
src/paper_agent/ranking/: ranker.py
src/paper_agent/reporting/: reporter.py
src/paper_agent/retrieval/: reference_resolver.py
src/paper_agent/summarization/: summarizer.py
src/paper_agent/tracing/: agent.py  state.py
ui/: app.js  index.html  styles.css
