[project]
name = "paper-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "httpx>=0.28.1",
    "langchain-core>=0.2",
    "langgraph>=0.2",
    "networkx>=3.6.1",
    "pypdf>=6.9.2",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_agent"]
